--- a/assets/scss/modules/_search.scss
+++ b/assets/scss/modules/_search.scss
@@ -73,7 +73,7 @@
 			overflow: hidden;
 			right: 0;
 			top: 50%;
-			background: transparent url(../images/magnifier.svg) no-repeat center center;
+			background: transparent url(../dist/images/magnifier.svg) no-repeat center center;
 			background-size: 100%;
 			border: none;
 			pointer-events: none;
