--- a/app/books.component.html
+++ b/app/books.component.html
@@ -1,10 +1,13 @@
 <p>There are {{totalBooks()}} total books in stock</p>
 <ul>
-    <li *ngFor="let book of books">
+    <li *ngFor="let book of books" [class.onSale]="book.onSale">
         <h2>{{book.name | uppercase}}</h2>
         <p class="description">{{book.description}}</p>
         <p class="price">{{book.price | currency: 'EUR':true}}</p>
         <p *ngIf="book.inStock > 0">{{book.inStock}} copies in stock</p>
         <p *ngIf="book.inStock === 0">Temporarily out of stock</p>
+        <div>
+          <img [src]="book.image">
+        </div>
     </li>
 </ul>
