--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+}
+
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
