--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,30 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
+
+h3 {
+  color:#999999;
+  font-size: 1.25rem;
+}
+
+.artist {
+  color: #333333;
+  margin-bottom: 10px;
+}
+
+.artist > span {
+  color: blue;
+  font-size: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  font-weight: 700;
+}
+
+.artist > input {
+  padding: 3px;
+  color: blue;
+  font-size: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  font-weight: 700;
+}
