--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 main {
-  padding: 1em;
+  padding: 1em 0;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   margin-top: 50px;
