--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,21 @@
   <h1>{{title}}</h1>
   <img src="../../public/images/kitten.jpg">
 
-  <h3>Site Link: {{ artist.webSite }}</h3>
-  <div class="artist">
-    Artist: <span>{{ artist.name }}</span>
+  <h3>[Click an artist name to for its site info]</h3>
+
+  <ul>
+    <li *ngFor="let artist of artists"
+      (click)="selectArtist(artist)">
+      <span>
+        {{ artist.id }}
+      </span>
+        {{ artist.name }}
+    </li>
+  </ul>
+
+  <div *ngIf="artistSelected" class="artist">
+      Artist: <span>{{ artistSelected.name }}</span>
+      Web Site: <input [(ngModel)]="artistSelected.webSite" placeholder="webSite">
   </div>
-  <div class="artist">
-    Web Site:
-    <input [(ngModel)]="artist.webSite" placeholder="webSite">
-  </div>
+
 </main>
