--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,9 +14,6 @@
     </li>
   </ul>
 
-  <div *ngIf="artistSelected" class="artist">
-      Artist: <span>{{ artistSelected.name }}</span>
-      Web Site: <input [(ngModel)]="artistSelected.webSite" placeholder="webSite">
-  </div>
+  <artist-detail [artist]="artistSelected"></artist-detail>
 
 </main>
