--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,7 @@ main {
   margin-top: 50px;
   display: block;
 
-  background-color: firebrick;
+  background-color: blueviolet;
 }
 
 main ul > li {
