--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@ main {
   margin-top: 50px;
   display: block;
 
-  background-color: blueviolet;
+  background-color: saddlebrown;
 }
 
 main ul > li {
