--- a/src/artist-detail/artist-detail.component.html
+++ b/src/artist-detail/artist-detail.component.html
@@ -1,4 +1,6 @@
 <div *ngIf="artist" class="artist">
   Artist: <span>{{ artist.name }}</span>
   Web Site: <input [(ngModel)]="artist.webSite" placeholder="webSite">
+
+  <button (click)="goBack()">Back</button>
 </div>
