--- a/src/portfolio/portfolio.component.html
+++ b/src/portfolio/portfolio.component.html
@@ -2,9 +2,12 @@
 <div>{{ title }}</div>
 
 <div class="artistGrids">
-  <div *ngFor="let artist of artists" class="artistGrid">
+  <a *ngFor="let artist of artists"
+    [routerLink]="['/artist', artist.id]"
+    class="artistGrid">
+
     <div class="artistGrid__item">
       <h4>{{ artist.name }}</h4>
     </div>
-  </div>
+  </a>
 </div>
