--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <p class="imageFrame__caption">Click an artist name for the site info</p>
   </div>
 
-  <ul>
+  <ul class="siteList">
     <li *ngFor="let artist of artists"
       (click)="selectArtist(artist)">
       <span>
