--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@ main {
   text-align: center;
   display: block;
 
-  background-color: cornsilk;
+  background-color: rgb(255, 216, 0);
 
   display: flex;
   flex-direction: column;
@@ -49,9 +49,26 @@ main {
     }
   }
 
-}
+  .siteList {
+    color: #737E86;
+    margin: 25px 0 15px 0;
+    font-size: 15px;
+    line-height: 21px;
+    list-style: none outside;
 
-main ul > li {
-  list-style: none;
-  margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    li {
+      background: url(../../public/images/list-light.png) no-repeat 20px 6px;
+      margin-bottom: 10px;
+      position: relative;
+      list-style: none;
+      margin-left: 0;
+      padding: 0;
+      padding-left: 50px;
+      border: 0;
+    }
+  }
 }
