--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,38 +10,16 @@
           <div class="l-menuContainer menuContainer js-mobileMenuContainer">
             <ul class="menuList">
               <li class="menuItem"><a href="#"><span>Home</span></a></li>
-              <li class="menuItem"><a href="#" class="currentSelection"><span>Color Palette</span></a></li>
-              <li class="menuItem"><a href="#"><span>Typography</span></a></li>
-              <li class="menuItem"><a href="#"><span>Text Styles</span></a></li>
-              <li class="menuItem"><a href="#"><span>Breakpoints</span></a></li>
-              <li class="menuItem"><a href="#"><span>Buttons</span></a></li>
+              <li class="menuItem">
+                <a class="currentSelection" routerLink="/portfolio"><span>Portfolio</span></a>
+              </li>
+              <li class="menuItem">
+                <a routerLink="/artists"><span>Artists</span></a>
+              </li>
             </ul>
-          </div>
-          <div class="l-searchContainer searchContainer js-showSearchPanel"><a class="searchButton searchButton--default"><i class="fa fa-search"></i></a></div>
-          <div class="l-searchWrapper searchWrapper js-searchPanel">
-            <form action="#" method="post" class="l-searchWrapper__form"><a class="searchButton searchButton--whiteSquare"><i class="fa fa-search"></i></a>
-              <input type="text" name="s" placeholder="Enter your search" class="searchInput"><a class="closeButton closeButton--dimmedSquare js-hideSearchPanel"><i class="fa fa-close"></i></a>
-            </form>
           </div>
         </div>
       </div>
-  <!--<h1>Welcome to {{ title }}</h1>-->
-
-  <!--<h3>Site Link: {{ artist.webSite }}</h3>-->
-  <div class="artist">
-    Artist: <span>{{ artist.name }}</span>
-  </div>
-  <div class="artist">
-      Web Site:
-      <input [(ngModel)]="artist.webSite" placeholder="webSite">
-  </div>
-
-  <div>
-    <a routerLink="/portfolio">Portfolio</a>
-  </div>
-  <div>
-    <a routerLink="/artists">Artists</a>
-  </div>
 
   <router-outlet></router-outlet>
 
