--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,32 @@
 <div class="l-pageContainer pageContainer">
   <div class="l-pageHeader pageHeader">
-        <div class="l-navContainer navContainer">
-          <div class="l-logoContainer logoContainer">
-            <!--<div class="imageFrame"><img alt="img" src="./images/site-logo.png" class="imageResponsive"></div>-->
-          </div>
-          <div class="l-toggleMenuContainer toggleMenuContainer"><a href="#" class="js-toggleMobileMenu"><i class="fa fa-bars fa-2x"></i></a></div>
-        </div>
-        <div class="l-menuWrapper menuWrapper js-menuWrapper">
-          <div class="l-menuContainer menuContainer js-mobileMenuContainer">
-            <ul class="menuList">
-              <li class="menuItem"><a href="#"><span>Home</span></a></li>
-              <li class="menuItem">
-                <a class="currentSelection" routerLink="/portfolio"><span>Portfolio</span></a>
-              </li>
-              <li class="menuItem">
-                <a routerLink="/artists"><span>Artists</span></a>
-              </li>
-            </ul>
-          </div>
-        </div>
+    <div class="l-navContainer navContainer">
+      <div class="l-logoContainer logoContainer">
+        <!--<div class="imageFrame"><img alt="img" src="./images/site-logo.png" class="imageResponsive"></div>-->
       </div>
+      <div class="l-toggleMenuContainer toggleMenuContainer"><a href="#" class="js-toggleMobileMenu"><i class="fa fa-bars fa-2x"></i></a></div>
+    </div>
+    <div class="l-menuWrapper menuWrapper js-menuWrapper">
+      <div class="l-menuContainer menuContainer js-mobileMenuContainer">
+        <ul class="menuList">
+          <li class="menuItem"><a href="#"><span>Home</span></a></li>
+          <li class="menuItem">
+            <a class="currentSelection" routerLink="/portfolio"><span>Portfolio</span></a>
+          </li>
+          <li class="menuItem">
+            <a routerLink="/artists"><span>Artists</span></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-  <router-outlet></router-outlet>
+  <div class="l-pageContentWrapper pageContentWrapper">
+    <div class="l-contentContainer contentContainer">
+
+      <router-outlet></router-outlet>
+
+    </div>
+  </div>
 
 </div>
