--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,6 @@
   <div class="l-pageHeader pageHeader">
     <div class="l-navContainer navContainer">
       <div class="l-logoContainer logoContainer">
-        <!--<div class="imageFrame"><img alt="img" src="./images/site-logo.png" class="imageResponsive"></div>-->
       </div>
       <div class="l-toggleMenuContainer toggleMenuContainer"><a href="#" class="js-toggleMobileMenu"><i class="fa fa-bars fa-2x"></i></a></div>
     </div>
@@ -22,7 +21,7 @@
   </div>
 
   <div class="l-pageContentWrapper pageContentWrapper">
-    <div class="l-contentContainer contentContainer">
+    <div class="l-contentContainer contentContainer contentContainer--artistSite">
 
       <router-outlet></router-outlet>
 
