--- a/src/artist/artist.component.html
+++ b/src/artist/artist.component.html
@@ -1,5 +1,4 @@
-<main>
-  <img src="../../public/images/kitten.jpg">
+<!--<main>-->
 
   <h3>[Click an artist name to for its site info]</h3>
 
@@ -15,4 +14,4 @@
 
   <artist-detail [artist]="artistSelected"></artist-detail>
 
-</main>
+<!--</main>-->
