--- a/src/portfolio/portfolio.component.html
+++ b/src/portfolio/portfolio.component.html
@@ -1,10 +1,13 @@
+<div class="artistMainContent">
+
 <h3>Artist Portfolio</h3>
-<div>{{ title }}</div>
 
 <div class="artistGrids">
   <div *ngFor="let artist of artists" class="artistGrid">
     <div class="artistGrid__item">
-      <h4>{{ artist.name }}</h4>
+      <span>{{ artist.name }}</span>
     </div>
   </div>
+</div>
+
 </div>
