--- a/src/sass/modules/_artist-sites.scss
+++ b/src/sass/modules/_artist-sites.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
 
   .imageFrame {
     width: 33.333%;
@@ -59,6 +60,27 @@
       padding: 0;
       padding-left: 50px;
       border: 0;
+    }
+  }
+}
+
+.artistGrids {
+  width: 100%;
+  padding: 25px;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: stretch;
+
+  .artistGrid {
+    border: 5px solid cornflowerblue;
+    width: 30%;
+    height: 100px;
+
+    .artistGrid__item {
+      color: cornflowerblue;
+      text-align: center;
     }
   }
 }
