--- a/src/sass/modules/_page-content.scss
+++ b/src/sass/modules/_page-content.scss
@@ -11,7 +11,7 @@
     // background-color: greenyellow;
     border-top: 1px solid lightslategray;
     padding-top: 30px;
-    padding-left: 20px;
+    // padding-left: 20px;
   }
 
   .contentFooterContainer {
