--- a/src/artist-detail/artist-detail.component.html
+++ b/src/artist-detail/artist-detail.component.html
@@ -2,5 +2,5 @@
   Artist: <span>{{ artist.name }}</span>
   Web Site: <input [(ngModel)]="artist.webSite" placeholder="webSite">
 
-  <button (click)="goBack()">Back</button>
+  <button (click)="navigateBack()">Back</button>
 </div>
