--- a/src/artist/artist.component.html
+++ b/src/artist/artist.component.html
@@ -18,6 +18,6 @@
       <span>Current Artist: </span> {{ artistSelected.name }}
     </div>
 
-    <button (click)="displbuttonyArtistInfo()">Display Artist Info</button>
+    <button (click)="displayArtistInfo()">Display Artist Info</button>
   </div>
 </main>
