--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,10 @@
 </div>
 
 <div>
-  <a routerLink="/portfolio">Portfolio</a>
+  <a routerLink="/portfolio" routerLinkActive="activeLink">Portfolio</a>
 </div>
 <div>
-  <a routerLink="/artists">Artists</a>
+  <a routerLink="/artists" routerLinkActive="activeLink">Artists</a>
 </div>
 
 <router-outlet></router-outlet>
