--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,33 +6,22 @@
     <div class="l-menuWrapper menuWrapper">
       <div class="l-menuContainer menuContainer">
         <ul class="menuList">
-          <li class="menuItem"><a href="#"><span>Artists</span></a></li>
-          <li class="menuItem"><a href="#"><span>Portfolio</span></a></li>
+          <li class="menuItem">
+            <a routerLink="/portfolio" routerLinkActive="activeLink">
+              <span>Portfolio</span>
+            </a>
+          </li>
+          <li class="menuItem">
+            <a routerLink="/artists" routerLinkActive="activeLink">
+              <span>Artists</span>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
   </div>
   <div class="l-pageContentWrapper pageContentWrapper">
-
     <div class="l-contentContainer contentContainer">
-      <h1>Welcome to {{ title }}</h1>
-
-      <h3>Site Link: {{ artist.webSite }}</h3>
-      <div class="artist">
-        Artist: <span>{{ artist.name }}</span>
-      </div>
-      <div class="artist">
-          Web Site:
-          <input [(ngModel)]="artist.webSite" placeholder="webSite">
-      </div>
-
-      <div>
-        <a routerLink="/portfolio" routerLinkActive="activeLink">Portfolio</a>
-      </div>
-      <div>
-        <a routerLink="/artists" routerLinkActive="activeLink">Artists</a>
-      </div>
-
       <router-outlet></router-outlet>
     </div>
 
