--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,9 @@
   </div>
   <div class="l-pageContentWrapper pageContentWrapper">
     <div class="l-contentContainer contentContainer">
-      <router-outlet></router-outlet>
+      <div class="artistContent">
+        <router-outlet></router-outlet>
+      </div>
     </div>
 
     <div class="l-contentFooterContainer contentFooterContainer">
