--- a/src/sass/modules/_all-modules.scss
+++ b/src/sass/modules/_all-modules.scss
@@ -1,29 +1,6 @@
 @import "page-header";
 @import "page-content";
-
-
-// .l-paletteBlockContainer {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: flex-start;
-
-//   @include break(md) {
-//     flex-direction: row;
-//     flex-wrap: wrap;
-//   }
-// }
-
-// .l-.paletteBlock {
-//  flex: 1 1 auto;
-
-//   @include break(md) {
-//     flex: 0 0 50%;
-//   }
-
-//   @include break(lg) {
-//     flex: 0 0 25%;
-//   }
-// }
+@import "artist-content";
 
 .paletteBlock {
   border: none;
