--- a/src/sass/modules/_page-header.scss
+++ b/src/sass/modules/_page-header.scss
@@ -99,12 +99,13 @@
 
                 border-color: rgba(0,0,0, 0.1);
               }
-
-
             }
 
+            a.currentSelection {
+              // background-color: #554d41;
+            }
             .activeLink {
-              color: #009cde;
+              color: #2ebaae;
             }
           }
         }
