--- a/src/portfolio/portfolio.component.html
+++ b/src/portfolio/portfolio.component.html
@@ -1,13 +1,12 @@
-<h3>Artist Portfolio</h3>
-<div>{{ title }}</div>
-
-<div class="artistGrids">
-  <a *ngFor="let artist of artists"
-    [routerLink]="['/artist', artist.id]"
-    class="artistGrid">
-
-    <div class="artistGrid__item">
-      <h4>{{ artist.name }}</h4>
+<div class="artistContainer">
+  <div *ngFor="let artist of artists"
+    class="artistBlock">
+    <div class="imageContainer">
+      <div class="imageFrame"><img src="../../public/images/kitten.jpg" class="image--round"/>
+      </div>
     </div>
-  </a>
+    <div class="artistBlock__title">{{ artist.name }}</div>
+    <div class="artistBlock__desc"> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+  </div>
+
 </div>
