--- a/src/portfolio/portfolio.component.html
+++ b/src/portfolio/portfolio.component.html
@@ -8,4 +8,6 @@
     <div class="artistBlock__title">{{ artist.name }}</div>
     <div class="artistBlock__desc"> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
   </div>
+
+  <artist-search></artist-search>
 </div>
