--- a/src/sass/modules/_artist-content.scss
+++ b/src/sass/modules/_artist-content.scss
@@ -90,6 +90,7 @@
 
     .infoButton {
       background-color: #2991d6;
+      margin: 5px;
       border-radius: 5px;
       color: #fff;
       display: inline-block;
